<resources>
    <string name="app_name">CNema</string>
    <string name="first_name">First Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_reservations">My Reservations</string>
    <string name="my_profile">My Profile</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="slow_or_no_internet_connection_check_your_connection">Slow or no internet connection, check your connection</string>
    <string name="refresh">Refresh</string>
    <string name="whoops">Whoops</string>
    <string name="sort_descending_order">Sort Descending order</string>
    <string name="sort_ascending_order">Sort Ascending order</string>
    <string name="todays_movies">Todays\' Movies</string>
    <string name="lowest_rated">Lowest Rated</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="details">Details</string>
    <string name="long_desc_text">The default OnClickListener opens the menu when the menu icon is clicked. You can change this behaviour, for example to open a menu with a different UX, like a bottom sheet panel. Obviously if you want a UX different from the one provided by the library, you are responsible for creating your own components</string>
</resources>