<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context="ui.home.HomeFragment">

    <androidx.cardview.widget.CardView
        app:layout_scrollFlags="scroll|enterAlways"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardUseCompatPadding="true"
        android:id="@+id/search"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="5dp">
        <androidx.appcompat.widget.SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchQuery"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:queryHint="Search for movies"
            android:textColor="@color/black"
            app:iconifiedByDefault="false"
            app:endIconMode="clear_text" />
        <ImageButton
            android:layout_marginRight="5dp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:visibility="gone"
            android:layout_gravity="end|center_vertical"
            android:id="@+id/searchBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:src="@drawable/ic_baseline_search_24"/>
    </androidx.cardview.widget.CardView>
    <ImageButton
        android:layout_marginEnd="10dp"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="end|center_vertical"
        android:id="@+id/sortAscending"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintTop_toTopOf="@id/search"
        app:layout_constraintBottom_toBottomOf="@id/search"
        android:src="@drawable/ic_sort_ascending"
        android:contentDescription="@string/sort_ascending_order" />

    <ImageButton
        android:layout_marginEnd="10dp"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="end|center_vertical"
        android:id="@+id/sortDescending"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintTop_toTopOf="@id/search"
        app:layout_constraintBottom_toBottomOf="@id/search"
        android:contentDescription="@string/sort_descending_order"
        android:src="@drawable/ic_sort_descending"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/movie_list" />

    <ProgressBar
        android:id="@+id/pb"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:indeterminateBehavior="cycle"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:visibility="gone"
        android:src="@drawable/ic_baseline_refresh_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/refresh"
        android:layout_margin="16dp" />

    <LinearLayout
        android:id="@+id/no_connection"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageView
            android:id="@+id/noDataImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_no_wifi"/>
        <TextView
            android:id="@+id/noDataTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whoops"
            android:layout_marginTop="10dp"
            android:textSize="26sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/noDataText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/slow_or_no_internet_connection_check_your_connection"
            android:minLines="2"
            android:maxLines="2"
            android:layout_marginTop="10dp"
            android:textAlignment="center"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/refreshBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
           android:background="@drawable/button_bg"
            android:layout_marginTop="5dp"
            android:text="@string/refresh"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>